--- a/index.html
+++ b/index.html
@@ -112,15 +112,15 @@
                 <div class="content">
                     <div class="row">
                         <!-- Logo -->
-                        <img src="./assets/img/logo.svg" alt="Besnik." />
+                        <img src="./assets/img/logo.svg" alt="Besnik." loading="lazy" />
 
                         <!-- Stars -->
                         <div class="stars">
-                            <img src="./assets/img/star.svg" alt="Star" />
-                            <img src="./assets/img/star.svg" alt="Star" />
-                            <img src="./assets/img/star.svg" alt="Star" />
-                            <img src="./assets/img/star.svg" alt="Star" />
-                            <img src="./assets/img/star.svg" alt="Star" />
+                            <img src="./assets/img/star.svg" alt="Star" loading="lazy" />
+                            <img src="./assets/img/star.svg" alt="Star" loading="lazy" />
+                            <img src="./assets/img/star.svg" alt="Star" loading="lazy" />
+                            <img src="./assets/img/star.svg" alt="Star" loading="lazy" />
+                            <img src="./assets/img/star.svg" alt="Star" loading="lazy" />
                         </div>
                     </div>
                     <div class="row row-desc">
@@ -129,19 +129,19 @@
                     </div>
                     <div class="images">
                         <a href="#!">
-                            <img src="./assets/img/client-1.svg" alt="Client 1" />
+                            <img src="./assets/img/client-1.svg" alt="Client 1" loading="lazy" />
                         </a>
                         <a href="#!">
-                            <img src="./assets/img/client-2.svg" alt="Client 2" />
+                            <img src="./assets/img/client-2.svg" alt="Client 2" loading="lazy" />
                         </a>
                         <a href="#!">
-                            <img src="./assets/img/client-3.svg" alt="Client 3" />
+                            <img src="./assets/img/client-3.svg" alt="Client 3" loading="lazy" />
                         </a>
                         <a href="#!">
-                            <img src="./assets/img/client-4.svg" alt="Client 4" />
+                            <img src="./assets/img/client-4.svg" alt="Client 4" loading="lazy" />
                         </a>
                         <a href="#!">
-                            <img src="./assets/img/client-5.svg" alt="Client 5" />
+                            <img src="./assets/img/client-5.svg" alt="Client 5" loading="lazy" />
                         </a>
                     </div>
                 </div>
@@ -158,11 +158,16 @@
                     <!-- List guide -->
                     <ul class="list-guide">
                         <li class="guide-item">
-                            <img src="./assets/img/buyer.svg" alt="Buyer" class="icon" />
+                            <img src="./assets/img/buyer.svg" alt="Buyer" class="icon" loading="lazy" />
                             <h3 class="title">Buyer Guides</h3>
                             <a href="#!" class="link">
                                 <span>How to buy</span>
-                                <img src="./assets/img/arrow-right.svg" alt="Arrow right" class="arrow" />
+                                <img
+                                    src="./assets/img/arrow-right.svg"
+                                    alt="Arrow right"
+                                    class="arrow"
+                                    loading="lazy"
+                                />
                             </a>
                         </li>
                         <li class="guide-item">
@@ -170,15 +175,25 @@
                             <h3 class="title">Renter Guides</h3>
                             <a href="#!" class="link">
                                 <span>How to rent</span>
-                                <img src="./assets/img/arrow-right.svg" alt="Arrow right" class="arrow" />
+                                <img
+                                    src="./assets/img/arrow-right.svg"
+                                    alt="Arrow right"
+                                    class="arrow"
+                                    loading="lazy"
+                                />
                             </a>
                         </li>
                         <li class="guide-item">
-                            <img src="./assets/img/seller.svg" alt="Seller" class="icon" />
+                            <img src="./assets/img/seller.svg" alt="Seller" class="icon" loading="lazy" />
                             <h3 class="title">Seller Guides</h3>
                             <a href="#!" class="link">
                                 <span>How to sell</span>
-                                <img src="./assets/img/arrow-right.svg" alt="Arrow right" class="arrow" />
+                                <img
+                                    src="./assets/img/arrow-right.svg"
+                                    alt="Arrow right"
+                                    class="arrow"
+                                    loading="lazy"
+                                />
                             </a>
                         </li>
                     </ul>
@@ -198,7 +213,12 @@
                             <p class="desc">Everything you need to know when you're looking</p>
                             <a href="#!" class="link">
                                 <span>View All Properties</span>
-                                <img src="./assets/img/arrow-right.svg" alt="Arrow right" class="arrow" />
+                                <img
+                                    src="./assets/img/arrow-right.svg"
+                                    alt="Arrow right"
+                                    class="arrow"
+                                    loading="lazy"
+                                />
                             </a>
                         </div>
                     </header>
@@ -207,7 +227,12 @@
                         <!-- Featured item 1 -->
                         <div class="item">
                             <a href="#!">
-                                <img src="./assets/img/featured-1.png" alt="Nikko Apartments" class="thumb" />
+                                <img
+                                    src="./assets/img/featured-1.png"
+                                    alt="Nikko Apartments"
+                                    class="thumb"
+                                    loading="lazy"
+                                />
                             </a>
                             <div class="body">
                                 <h3 class="title">
@@ -215,13 +240,13 @@
                                 </h3>
                                 <p class="desc">8502 Preston Rd. Inglewood, Maine 98280</p>
                                 <div class="info">
-                                    <img src="./assets/img/beds.svg" alt="" class="icon" />
+                                    <img src="./assets/img/beds.svg" alt="" class="icon" loading="lazy" />
                                     <span class="label">5 Beds</span>
 
-                                    <img src="./assets/img/both.svg" alt="" class="icon" />
+                                    <img src="./assets/img/both.svg" alt="" class="icon" loading="lazy" />
                                     <span class="label">2 both</span>
 
-                                    <img src="./assets/img/sqft.svg" alt="" class="icon" />
+                                    <img src="./assets/img/sqft.svg" alt="" class="icon" loading="lazy" />
                                     <span class="label">2000 Sqft</span>
                                 </div>
                             </div>
@@ -230,7 +255,12 @@
                         <!-- Featured item 2 -->
                         <div class="item">
                             <a href="#!">
-                                <img src="./assets/img/featured-2.png" alt="CouCou Homestead" class="thumb" />
+                                <img
+                                    src="./assets/img/featured-2.png"
+                                    alt="CouCou Homestead"
+                                    class="thumb"
+                                    loading="lazy"
+                                />
                             </a>
                             <div class="body">
                                 <h3 class="title">
@@ -240,13 +270,13 @@
                                     8502 Preston Rd. Inglewood, Maine 98280
                                 </p>
                                 <div class="info">
-                                    <img src="./assets/img/beds.svg" alt="" class="icon" />
+                                    <img src="./assets/img/beds.svg" alt="" class="icon" loading="lazy" />
                                     <span class="label">5 Beds</span>
 
-                                    <img src="./assets/img/both.svg" alt="" class="icon" />
+                                    <img src="./assets/img/both.svg" alt="" class="icon" loading="lazy" />
                                     <span class="label">2 both</span>
 
-                                    <img src="./assets/img/sqft.svg" alt="" class="icon" />
+                                    <img src="./assets/img/sqft.svg" alt="" class="icon" loading="lazy" />
                                     <span class="label">2000 Sqft</span>
                                 </div>
                             </div>
@@ -255,7 +285,12 @@
                         <!-- Featured item 3 -->
                         <div class="item">
                             <a href="#!">
-                                <img src="./assets/img/featured-3.png" alt="CouCou Homestead" class="thumb" />
+                                <img
+                                    src="./assets/img/featured-3.png"
+                                    alt="CouCou Homestead"
+                                    class="thumb"
+                                    loading="lazy"
+                                />
                             </a>
                             <div class="body">
                                 <h3 class="title">
@@ -263,13 +298,13 @@
                                 </h3>
                                 <p class="desc">8502 Preston Rd. Inglewood, Maine 98280</p>
                                 <div class="info">
-                                    <img src="./assets/img/beds.svg" alt="" class="icon" />
+                                    <img src="./assets/img/beds.svg" alt="" class="icon" loading="lazy" />
                                     <span class="label">5 Beds</span>
 
-                                    <img src="./assets/img/both.svg" alt="" class="icon" />
+                                    <img src="./assets/img/both.svg" alt="" class="icon" loading="lazy" />
                                     <span class="label">2 both</span>
 
-                                    <img src="./assets/img/sqft.svg" alt="" class="icon" />
+                                    <img src="./assets/img/sqft.svg" alt="" class="icon" loading="lazy" />
                                     <span class="label">2000 Sqft</span>
                                 </div>
                             </div>
@@ -291,48 +326,49 @@
                                 class="image"
                                 src="./assets/img/stats-img.png"
                                 alt="You’ve found a neighborhood you love."
+                                loading="lazy"
                             />
 
                             <!-- Trend -->
                             <div class="stats-trend">
                                 <div class="row">
                                     <strong class="value">40,000+</strong>
-                                    <img src="./assets/img/arrow-trend-up.svg" alt="" class="icon" />
+                                    <img src="./assets/img/arrow-trend-up.svg" alt="" class="icon" loading="lazy" />
                                 </div>
                                 <p class="desc">By avarage for 2 bedroom apments in San Francisco, CA</p>
                                 <div class="separate"></div>
                                 <div class="avatar-block">
                                     <div class="avatar-group">
-                                        <img src="./assets/img/avatar-1.jpg" alt="" class="avatar" />
-                                        <img src="./assets/img/avatar-2.jpg" alt="" class="avatar" />
+                                        <img src="./assets/img/avatar-1.jpg" alt="" class="avatar" loading="lazy" />
+                                        <img src="./assets/img/avatar-2.jpg" alt="" class="avatar" loading="lazy" />
                                     </div>
                                     <div class="avatar-group">
-                                        <img src="./assets/img/avatar-3.jpg" alt="" class="avatar" />
-                                        <img src="./assets/img/avatar-4.webp" alt="" class="avatar" />
-                                        <img src="./assets/img/avatar-5.jpg" alt="" class="avatar" />
+                                        <img src="./assets/img/avatar-3.jpg" alt="" class="avatar" loading="lazy" />
+                                        <img src="./assets/img/avatar-4.webp" alt="" class="avatar" loading="lazy" />
+                                        <img src="./assets/img/avatar-5.jpg" alt="" class="avatar" loading="lazy" />
                                         <div class="avatar" style="--bg-color: #1f3bb1">R</div>
                                     </div>
                                     <div class="avatar-group">
                                         <div class="avatar" style="--bg-color: #24d6d9">FJ</div>
-                                        <img src="./assets/img/avatar-6.jpg" alt="" class="avatar" />
+                                        <img src="./assets/img/avatar-6.jpg" alt="" class="avatar" loading="lazy" />
                                         <div class="avatar" style="--bg-color: #f8c120">S</div>
                                     </div>
                                     <div class="avatar-group">
-                                        <img src="./assets/img/avatar-7.jpeg" alt="" class="avatar" />
-                                        <img src="./assets/img/avatar-8.jpg" alt="" class="avatar" />
-                                        <img src="./assets/img/avatar-9.jpg" alt="" class="avatar" />
+                                        <img src="./assets/img/avatar-7.jpeg" alt="" class="avatar" loading="lazy" />
+                                        <img src="./assets/img/avatar-8.jpg" alt="" class="avatar" loading="lazy" />
+                                        <img src="./assets/img/avatar-9.jpg" alt="" class="avatar" loading="lazy" />
                                         <div class="avatar" style="--bg-color: #f97f6b">JJ</div>
                                     </div>
                                     <div class="avatar-group">
-                                        <img src="./assets/img/avatar-10.jpg" alt="" class="avatar" />
+                                        <img src="./assets/img/avatar-10.jpg" alt="" class="avatar" loading="lazy" />
                                         <div class="avatar" style="--bg-color: #73a242">QV</div>
                                     </div>
                                     <div class="avatar-group">
-                                        <img src="./assets/img/avatar-11.jpg" alt="" class="avatar" />
-                                        <img src="./assets/img/avatar-12.jpg" alt="" class="avatar" />
+                                        <img src="./assets/img/avatar-11.jpg" alt="" class="avatar" loading="lazy" />
+                                        <img src="./assets/img/avatar-12.jpg" alt="" class="avatar" loading="lazy" />
                                     </div>
                                     <div class="avatar-group">
-                                        <img src="./assets/img/avatar-13.jfif" alt="" class="avatar" />
+                                        <img src="./assets/img/avatar-13.jfif" alt="" class="avatar" loading="lazy" />
                                         <div class="avatar" style="--bg-color: #1f3bb0">UI</div>
                                     </div>
                                 </div>
@@ -375,7 +411,12 @@
                             </p>
                             <a href="#!" class="btn">Subscribe</a>
                         </div>
-                        <img src="./assets/img/newletter.svg" alt="Subscribe to our Newsletter!" class="image" />
+                        <img
+                            src="./assets/img/newletter.svg"
+                            alt="Subscribe to our Newsletter!"
+                            class="image"
+                            loading="lazy"
+                        />
                     </div>
                 </div>
             </div>
@@ -448,19 +489,19 @@
                         <p class="desc">You’ll find your next home, in any style you prefer.</p>
                         <div class="social">
                             <a href="#!" class="social-link">
-                                <img src="./assets/img/facebook.svg" alt="" />
+                                <img src="./assets/img/facebook.svg" alt="" loading="lazy" />
                             </a>
                             <a href="#!" class="social-link">
-                                <img src="./assets/img/twitter.svg" alt="" />
+                                <img src="./assets/img/twitter.svg" alt="" loading="lazy" />
                             </a>
                             <a href="#!" class="social-link">
-                                <img src="./assets/img/linkedin.svg" alt="" />
+                                <img src="./assets/img/linkedin.svg" alt="" loading="lazy" />
                             </a>
                         </div>
                     </div>
                 </div>
                 <div class="row row-bottom">
-                    <img src="./assets/img/logo.svg" alt="Besnik." class="logo" />
+                    <img src="./assets/img/logo.svg" alt="Besnik." class="logo" loading="lazy" />
                     <p class="copyright">Copyright 2020.com, All rights reserved.</p>
                 </div>
             </div>
